@@ -2,6 +2,8 @@
        shown even if there was no working copy. (Stefan)
 - CHG: URL's are shown unescaped now, at least everywhere
        where they can't be edited. (Stefan)
+- CHG: Follow the drive type settings: don't access
+       drives which are not used. (Stefan)
 - ADD: The "Browse..." Button in the relocate dialog
        works now. (Stefan)
 
